[metadata]
name = pastamaker
home-page = https://github.com/sileht/pastamaker
summary = 
description-file = README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pastamaker

[extras]
test =
    fixtures

[entry_points]
console_scripts =
    pastamaker-web = pastamaker.web:main
    pastamaker-worker = pastamaker.worker:main

[wheel]
universal = 1
