[metadata]
name = pastamaker
home-page = https://github.com/sileht/pastamaker
summary = pastamaker is a Github App to automatically manage Pull Requests "branch update" and "merge" when this one have 2 reviewer approvals.
description-file = README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pastamaker

[extras]
test =
    fixtures

[wheel]
universal = 1
