[metadata]
name = pastamaker
home-page = https://github.com/sileht/pastamaker
summary = pastamaker is a Github App to automatically manage Pull Requests "branch update" and "merge" when this one have 2 reviewer approvals.
description-file = README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages =
    pastamaker

include_package_data = true

install_requires =
    daiquiri
    flask
    pygithub
    cryptography
    requests
    redis
    rq
    gunicorn
    six
    pyyaml
    ujson
    gevent
    lz4
    mock
    futures
    rq-dashboard

[options.extras_require]
test =
    fixtures

[entry_points]
console_scripts =
    pastamaker-refresher = pastamaker.refresher:main

[build_wheel]
universal = 1
